--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   flutter_rating_bar: ^4.0.1
   readmore: ^2.1.0
+  geocoding: ^2.0.4
+  geolocator: ^8.2.1
 
 dev_dependencies:
   flutter_test:
